test/corpus/control_flow.txt
==================
If expression
==================
root = if this.type == "event" {
  this.content
} else {
  deleted()
}
---

(source
  (root_assignment
    value: (if_expr
      condition: (binary_expr
        left: (field_access
          object: (this_ref)
          field: (identifier))
        right: (string))
      consequence: (field_access
        object: (this_ref)
        field: (identifier))
      alternative: (deleted))))

==================
Match expression - with subject
==================
root = match this.type {
  "article" => this.title
  _ => deleted()
}
---

(source
  (root_assignment
    value: (match_expr
      condition: (field_access
        object: (this_ref)
        field: (identifier))
      (match_case
        pattern: (string)
        result: (field_access
          object: (this_ref)
          field: (identifier)))
      (match_case
        pattern: (catch_all)
        result: (deleted)))))

==================
Match expression - no subject
==================
root = match {
  this.a > 0 => "positive"
  _ => "other"
}
---

(source
  (root_assignment
    value: (match_expr
      (match_case
        pattern: (binary_expr
          left: (field_access
            object: (this_ref)
            field: (identifier))
          right: (number))
        result: (string))
      (match_case
        pattern: (catch_all)
        result: (string)))))
