test/corpus/expressions.txt
==================
Method chain - single
==================
root = this.user
---
(source
  (root_assignment
    value: (method_chain
      receiver: (identifier)
      method: (identifier))))

==================
Method chain - deep
==================
root = this.user.name.trim()
---
(source
  (root_assignment
    value: (method_chain
      receiver: (method_chain
        receiver: (method_chain
          receiver: (identifier)
          method: (identifier))
        method: (identifier))
      method: (call_expr
        function: (identifier)))))
==================
Method chain - parenthesized coalesce
==================
root = this.(bar | baz)
---
(source
  (root_assignment
    value: (method_chain
      receiver: (identifier)
      method: (parenthesized_expr
        (binary_expr
          left: (identifier)
          right: (identifier))))))

==================
Method chain - parenthesized coalesce with chained methods
==================
root = this.(bar | baz).trim()
---
(source
  (root_assignment
    value: (method_chain
      receiver: (method_chain
        receiver: (identifier)
        method: (parenthesized_expr
          (binary_expr
            left: (identifier)
            right: (identifier))))
      method: (call_expr
        function: (identifier)))))

==================
Method chain - parenthesized coalesce with named args
==================
root = this.(bar | baz).trim().replace_all("dog", "cat")
---
(source
  (root_assignment
    value: (method_chain
      receiver: (method_chain
        receiver: (method_chain
          receiver: (identifier)
          method: (parenthesized_expr
            (binary_expr
              left: (identifier)
              right: (identifier))))
        method: (call_expr
          function: (identifier)))
      method: (call_expr
        function: (identifier)
        (string)
        (string)))))

==================
Call expression - no args
==================
root = uuid_v4()
---
(source
  (root_assignment
    value: (call_expr
      function: (identifier))))

==================
Call expression - with args
==================
root = this.user.name.replace("foo", "bar")
---
(source
  (root_assignment
    value: (method_chain
      receiver: (method_chain
        receiver: (method_chain
          receiver: (identifier)
          method: (identifier))
        method: (identifier))
      method: (call_expr
        function: (identifier)
        (string)
        (string)))))

==================
Lambda
==================
root = this.roles.map_each(role -> role.uppercase())
---
(source
  (root_assignment
    value: (method_chain
      receiver: (method_chain
        receiver: (identifier)
        method: (identifier))
      method: (call_expr
        function: (identifier)
        (lambda
          param: (identifier)
          body: (method_chain
            receiver: (identifier)
            method: (call_expr
              function: (identifier))))))))

==================
Object literal
==================
root = {
  "id": this.user.id,
  "name": this.user.name,
}
---
(source
  (root_assignment
    value: (object_literal
      (pair
        key: (string)
        value: (method_chain
          receiver: (method_chain
            receiver: (identifier)
            method: (identifier))
          method: (identifier)))
      (pair
        key: (string)
        value: (method_chain
          receiver: (method_chain
            receiver: (identifier)
            method: (identifier))
          method: (identifier))))))

==================
Object literal - if expression key
==================
let custom = "local_prop"
let hello = "hello"
root = {
  prop: "name",
  $custom: "local_name",
  ($hello + "key"): "new_key",
  if true { this.prop.replace("in", "replace") } else { "false" }: 3
}
---
(source
  (let_assignment
    name: (identifier)
    value: (string))
  (let_assignment
    name: (identifier)
    value: (string))
  (root_assignment
    value: (object_literal
      (pair
        key: (identifier)
        value: (string))
      (pair
        key: (variable_ref
          (identifier))
        value: (string))
      (pair
        key: (parenthesized_expr
          (binary_expr
            left: (variable_ref
              (identifier))
            right: (string)))
        value: (string))
      (pair
        key: (if_expr
          condition: (boolean)
          consequence: (method_chain
            receiver: (method_chain
              receiver: (identifier)
              method: (identifier))
            method: (call_expr
              function: (identifier)
              (string)
              (string)))
          alternative: (string))
        value: (number)))))

==================
Array literal
==================
root = ["a", "b", "c"]
---
(source
  (root_assignment
    value: (array_literal
      (string)
      (string)
      (string))))

==================
Binary expression
==================
root = this.errors.length() > 0
---
(source
  (root_assignment
    value: (binary_expr
      left: (method_chain
        receiver: (method_chain
          receiver: (identifier)
          method: (identifier))
        method: (call_expr
          function: (identifier)))
      right: (number))))

==================
Unary expression
==================
root = !this.active
---
(source
  (root_assignment
    value: (unary_expr
      argument: (method_chain
        receiver: (identifier)
        method: (identifier)))))

==================
Parenthesized expression
==================
root = (this.a + this.b)
---
(source
  (root_assignment
    value: (parenthesized_expr
      (binary_expr
        left: (method_chain
          receiver: (identifier)
          method: (identifier))
        right: (method_chain
          receiver: (identifier)
          method: (identifier))))))

==================
Variable reference
==================
let kvs = this.items
root = $kvs
---
(source
  (let_assignment
    name: (identifier)
    value: (method_chain
      receiver: (identifier)
      method: (identifier)))
  (root_assignment
    value: (variable_ref
      (identifier))))

==================
Deleted
==================
root = deleted()
---
(source
  (root_assignment
    value: (deleted)))
