test/corpus/statements.txt
==================
Root assignment - simple value
==================
root = "hello"
---

(source
  (root_assignment
    value: (string)))

==================
Root assignment - deep path
==================
root.user.name = "alice"
---

(source
  (root_assignment
    path: (identifier)
    path: (identifier)
    value: (string)))

==================
Meta assignment
==================
meta original_topic = @kafka_topic
---

(source
  (meta_assignment
    key: (identifier)
    value: (meta_ref
      (identifier))))

==================
Let assignment
==================
let x = 42
---

(source
  (let_assignment
    name: (identifier)
    value: (number)))

==================
Map declaration
==================
map normalize_user {
  root = this.user
}
---

(source
  (map_declaration
    name: (identifier)
    (root_assignment
      value: (field_access
        object: (this_ref)
        field: (identifier)))))

==================
Import statement
==================
import "./common_maps.blobl"
---
(source
  (import_statement
    (string)))
